--- a/webos-meta/appinfo.json
+++ b/webos-meta/appinfo.json
@@ -15,16 +15,7 @@
 	"supportQuickStart": false,
 	"trustLevel": "trusted",
 	"requiredPermissions": [
-		"audio.operation",
-		"media.operation",
-		"mediacontroller.operation",
-		"mediaindexer.operation",
-		"mediapipeline.resourcemanagement",
-		"mediapipeline.operation",
-		"session.management",
-		"sleep.management",
-		"physicaldevice.management",
-		"physicaldevice.query"
+		"all"
 	],
 	"accessibility": {
 		"supportsAudioGuidance": true
